# EMV

./: CMakeLists.txt  README.md  main.cpp
include/: Connector.h  EMVConstants.h  Kernel.h  PCSCConnector.h  TLV.h  TLVContainer.h  TLVSimple.h  aid.h  apdu.h  rapdu.h
src/: Kernel.cpp  PCSCConnector.cpp  TLV.cpp  TLVContainer.cpp  TLVSimple.cpp  apdu.cpp  rapdu.cpp
